--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,236 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.center-on-codepen {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: linear-gradient(
+    to right top,
+    #27354a,
+    #272e3e,
+    #252731,
+    #212126,
+    #1b1b1b
+  );
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.switch {
+  overflow: hidden;
+  position: relative;
+  display: inline-block;
+  width: 320px;
+  height: 130px;
+  aspect-ratio: 32/13;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  border-radius: 999px;
+  cursor: pointer;
+  overflow: hidden;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #2196f3;
+  -webkit-transition: 0.6s ease-in-out;
+  transition: 0.6s ease-in-out;
+  border: 2px solid grey;
+}
+
+.slider:before {
+  position: absolute;
+  content: '';
+  height: 110px;
+  width: 110px;
+  border-radius: 50%;
+  left: 10px;
+  bottom: 10px;
+  background-color: #f9dc5c;
+  -webkit-transition: 0.6s;
+  transition: 0.6s;
+  z-index: 999;
+  -webkit-box-shadow: 0px 0px 50px 50px rgba(255, 255, 255, 0.3);
+  box-shadow: 0px 0px 50px 50px rgba(255, 255, 255, 0.3);
+}
+
+input:checked + .slider {
+  background-color: #1c1c24;
+  border: 2px solid white;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196f3;
+}
+
+input:checked + .slider:before {
+  transform: translateX(187px) translateY(2px);
+  background-color: #e0e0d1;
+}
+
+.clouds {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 320px;
+  height: 130px;
+  overflow: hidden;
+}
+
+.cloud1 {
+  position: relative;
+  z-index: 200;
+  -webkit-transition: 0.8s;
+  transition: 0.8s;
+  opacity: 0.95;
+}
+
+.cloud2 {
+  z-index: 100;
+  -webkit-transition: 1.1s;
+  transition: 1.1s;
+  transform: scale(1.15) translateY(-20px) translateX(-20px);
+  opacity: 0.5;
+}
+
+input:checked + .slider > .clouds {
+  -webkit-transform: translateY(99px);
+  -ms-transform: translateY(99px);
+  transform: translateY(99px);
+}
+
+.balloon {
+  z-index: 150;
+  position: absolute;
+  top: 0;
+  right: 100px;
+  height: 40px;
+  transform: translateY(20px);
+  -webkit-transition: 3s ease-in-out;
+  transition: 3s ease-in-out;
+}
+
+input:checked + .slider > .balloon {
+  transform: translateY(150px);
+}
+
+input:hover + .slider > .balloon {
+  animation: wiggle 3s infinite;
+}
+
+.night {
+  background-color: #1c1c24;
+  position: absolute;
+  display: none;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+}
+
+input:checked + .slider > .night {
+  z-index: 151;
+  display: block;
+}
+
+p {
+  z-index: 500;
+  position: absolute;
+  color: white;
+  opacity: 0;
+  transition: 0.6s;
+  color: #fff;
+  text-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 21px #fff, 0 0 42px #0fa,
+    0 0 82px #0fa, 0 0 92px #0fa, 0 0 102px #0fa, 0 0 151px #0fa;
+  transform: translateY(-80px);
+}
+
+p:nth-of-type(1) {
+  top: 10px;
+  left: 60px;
+  font-size: 10px;
+}
+
+p:nth-of-type(2) {
+  top: 30px;
+  font-size: 8px;
+  left: 170px;
+}
+p:nth-of-type(3) {
+  top: 60px;
+  font-size: 12px;
+  left: 10px;
+}
+p:nth-of-type(4) {
+  top: 90px;
+  font-size: 5px;
+  left: 70px;
+}
+p:nth-of-type(5) {
+  top: 55px;
+  font-size: 9px;
+  left: 140px;
+}
+
+input:checked + .slider .star {
+  transform: translateY(0px);
+  opacity: 1;
+}
+
+.spaceship {
+  z-index: 800;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  right: 100px;
+  height: 40px;
+  transform: translateY(150px) translateX(-150px);
+  -webkit-transition: 2s ease-in-out;
+  transition: transform 2s ease-in-out;
+  transition-delay: 1s;
+}
+
+input:checked + .slider .spaceship {
+  opacity: 1;
+  transform: translateY(-100px) translateX(40px);
+}
+
+.floating-toggle::before {
+  content: '';
+  position: absolute;
+  top: -55px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 10px;
+  height: 100px;
+  background: linear-gradient(#f10808, #fff);
+  border-radius: 2px;
+}
+
+@keyframes swing {
+  0% {
+    transform: rotate(3deg);
   }
-  to {
-    transform: rotate(360deg);
+  25% {
+    transform: rotate(1deg);
+  }
+  50% {
+    transform: rotate(-1deg);
+  }
+  75% {
+    transform: rotate(1deg);
+  }
+  100% {
+    transform: rotate(3deg);
   }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.floating-toggle {
+  animation: swing 2s ease-in-out infinite;
+  transform-origin: top center;
 }
