--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,3 @@
-.center-on-codepen {
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-image: linear-gradient(
-    to right top,
-    #27354a,
-    #272e3e,
-    #252731,
-    #212126,
-    #1b1b1b
-  );
-}
-
 .switch {
   overflow: hidden;
   position: relative;
@@ -138,7 +123,7 @@ input:checked + .slider > .night {
   display: block;
 }
 
-p {
+header p {
   z-index: 500;
   position: absolute;
   color: white;
@@ -150,28 +135,28 @@ p {
   transform: translateY(-80px);
 }
 
-p:nth-of-type(1) {
+header p:nth-of-type(1) {
   top: 10px;
   left: 60px;
   font-size: 10px;
 }
 
-p:nth-of-type(2) {
+header p:nth-of-type(2) {
   top: 30px;
   font-size: 8px;
   left: 170px;
 }
-p:nth-of-type(3) {
+header p:nth-of-type(3) {
   top: 60px;
   font-size: 12px;
   left: 10px;
 }
-p:nth-of-type(4) {
+header p:nth-of-type(4) {
   top: 90px;
   font-size: 5px;
   left: 70px;
 }
-p:nth-of-type(5) {
+header p:nth-of-type(5) {
   top: 55px;
   font-size: 9px;
   left: 140px;
