--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 html,
 body {
   font-family: 'Inter', 'Roboto', sans-serif;
-  background-color: #070720;
+  background-color: #0b0c2a;
   color: #fff;
   min-height: 100vh;
 }
